--- a/interfaces/web/partials/example_modal_device.hbs
+++ b/interfaces/web/partials/example_modal_device.hbs
@@ -38,18 +38,6 @@
                             required="required"                             class="form-control" name="message" data-parsley-trigger="keyup" data-parsley-minlength="20" data-parsley-maxlength="100" data-parsley-minlength-message="Come on! You need to enter at least a 20 caracters long comment.." data-parsley-validation-threshold="10"></textarea>
                                         </div>
                                                                                                                                                 <div class="item form-group">
-                        <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">Место прикрепелния на карте 
-                                                    </label>
-                                                                                                            <div class="col-md-9 col-sm-9 ">
-                            <select 
-                                id="modal_device_placeid" 
-                                class="form-control" 
-                                                            >
-                                <option value="0">--Выбрать--</option>
-                            </select>
-                            </div>
-                                                                </div>
-                                                        <div class="item form-group">
                         <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">Сколько часов по гринфичу 
                                                     </label>
                                                                                                         <div class="col-md-9 col-sm-9 ">
@@ -82,6 +70,26 @@
                                                     </label>
                                             <textarea id="modal_device_types" 
                                                     class="form-control" name="message" data-parsley-trigger="keyup" data-parsley-minlength="20" data-parsley-maxlength="100" data-parsley-minlength-message="Come on! You need to enter at least a 20 caracters long comment.." data-parsley-validation-threshold="10"></textarea>
+                                        </div>
+                                                        <div class="item form-group">
+                        <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">Статус устройства 
+                                                    </label>
+                                                                                                        <div class="col-md-9 col-sm-9 ">
+                                <input type="number" 
+                                    id="modal_device_status" 
+                                     
+                                        class="form-control ">
+                            </div>
+                                                                </div>
+                                                        <div class="item form-group">
+                        <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">Исключен из опроса 
+                                                    </label>
+                                            <label>
+                            <input type="checkbox" 
+                            id="modal_device_isexclude" 
+                                                        class="js-switch" checked="" style="display: none;" data-switchery="true">
+                                <span class="switchery switchery-default" style="background-color: rgb(38, 185, 154); border-color: rgb(38, 185, 154); box-shadow: rgb(38, 185, 154) 0px 0px 0px 11px inset; transition: border 0.4s ease 0s, box-shadow 0.4s ease 0s, background-color 1.2s ease 0s;"><small style="left: 12px; background-color: rgb(255, 255, 255); transition: background-color 0.4s ease 0s, left 0.2s ease 0s;"></small></span> Checked
+                        </label>
                                         </div>
                                 
                 </div>
