--- a/interfaces/web/partials/example_modal_place.hbs
+++ b/interfaces/web/partials/example_modal_place.hbs
@@ -41,6 +41,26 @@
                         class="form-control ">
                         </div>
                                             </div>
+                                                        <div class="item form-group">
+                        <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">Статус объекта 
+                                                    </label>
+                                                                                                        <div class="col-md-9 col-sm-9 ">
+                                <input type="number" 
+                                    id="modal_place_status" 
+                                     
+                                        class="form-control ">
+                            </div>
+                                                                </div>
+                                                        <div class="item form-group">
+                        <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name">Исключен из опроса 
+                                                    </label>
+                                            <label>
+                            <input type="checkbox" 
+                            id="modal_place_isexclude" 
+                                                        class="js-switch" checked="" style="display: none;" data-switchery="true">
+                                <span class="switchery switchery-default" style="background-color: rgb(38, 185, 154); border-color: rgb(38, 185, 154); box-shadow: rgb(38, 185, 154) 0px 0px 0px 11px inset; transition: border 0.4s ease 0s, box-shadow 0.4s ease 0s, background-color 1.2s ease 0s;"><small style="left: 12px; background-color: rgb(255, 255, 255); transition: background-color 0.4s ease 0s, left 0.2s ease 0s;"></small></span> Checked
+                        </label>
+                                        </div>
                                 
                 </div>
                 <div class="modal-footer" id="buttons"> asas</div>
